--- a/Affichage.html
+++ b/Affichage.html
@@ -171,9 +171,9 @@
 
     <!-- Modal pour la suppression de projets -->
     <div id="deleteProjectModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); z-index: 1000;">
-      <div style="margin: 10% auto; padding: 20px; background: white; border-radius: 8px; width: 50%; max-width: 600px;">
-        <h2>Supprimer un Projet</h2>
-        <p>Sélectionnez un projet à supprimer :</p>
+      <div style="margin: 10% auto; padding: 20px; background: white; border-radius: 8px; width: 50%; max-width: 600px; color: black;">
+        <h2 style="color: black;">Supprimer un Projet</h2>
+        <p style="color: black;">Sélectionnez un projet à supprimer :</p>
         <ul id="deleteProjectList" style="list-style: none; padding: 0;"></ul>
         <button id="closeDeleteProjectModal" style="margin-top: 20px;">Annuler</button>
       </div>
