--- a/Affichage.html
+++ b/Affichage.html
@@ -132,7 +132,7 @@
         <label for="secondColumnListbox">Tableau :</label>
         <select id="secondColumnListbox">
           <option value="">Select an option</option>
-          <option value="addTable">AJOUTER TABLEAU</option>
+          <option value="addTable">Ajouter Tableau</option>
         </select>
         <input type="file" id="fileInputProject" style="display: none;" accept=".xls,.xlsx,.xlsm" multiple />
       </div>
