--- a/Affichage.html
+++ b/Affichage.html
@@ -493,7 +493,7 @@
         // Demande le nom du nouveau projet
         const projectName = prompt("Entrez le nom du nouveau projet :");
       
-        // Vérifie immédiatement si l'utilisateur a annulé ou entré une valeur vide
+        // Si l'utilisateur clique sur "Annuler" ou laisse le champ vide
         if (!projectName || projectName.trim() === "") {
           alert("Opération annulée. Le projet ne sera pas ajouté.");
           window.isAddingProject = false; // Libère le flag
@@ -503,7 +503,7 @@
         // Demande le nom du premier tableau pour ce projet
         const firstTableName = prompt("Entrez le nom du premier tableau pour ce projet :");
       
-        // Vérifie immédiatement si l'utilisateur a annulé ou entré une valeur vide
+        // Si l'utilisateur clique sur "Annuler" ou laisse le champ vide
         if (!firstTableName || firstTableName.trim() === "") {
           alert("Opération annulée. Le tableau ne sera pas ajouté.");
           window.isAddingProject = false; // Libère le flag
