--- a/Affichage.html
+++ b/Affichage.html
@@ -500,7 +500,7 @@
             return; // Arrête immédiatement la fonction, aucun autre prompt
           }
       
-          // Demande le nom du premier tableau pour ce projet
+          // Demande le nom du premier tableau pour ce projet uniquement si le premier prompt a été validé
           const firstTableName = prompt("Entrez le nom du premier tableau pour ce projet :");
       
           // Si l'utilisateur clique sur "Annuler" ou laisse le champ vide
