--- a/Affichage.html
+++ b/Affichage.html
@@ -370,16 +370,7 @@
     grist.onRecords(function (receivedRecords) {
       console.log("Records received from Grist:", receivedRecords);
 
-      records = receivedRecords.map(record => ({
-        NomProjet: record.NomProjet || '',
-        NomEtage: record.NomEtage || '',
-        Emetteur: record.Emetteur || '',
-        Reference: record.Reference || '',
-        Indice: record.Indice || '',
-        Recu: record.Recu || '',
-        DescriptionObservations: record.DescriptionObservations || '',
-        ID_Ligne: record.id || ''
-      }));
+      records = receivedRecords;
 
       // Populate the first dropdown with unique values from 'NomProjet'
       const uniqueFirstColumnValues = [...new Set(records.map(record => record.NomProjet))];
@@ -447,8 +438,7 @@
         Reference: '',
         Indice: '',
         Recu: '',
-        DescriptionObservations: '',
-        ID_Ligne: newIdLigne.toString(),
+        DescriptionObservations: ''
       };
 
       // Ajoute la nouvelle ligne dans Grist
@@ -477,7 +467,7 @@
 
     // Function to insert a row below the specified row with the same "Emetteur" value
     function insertEmetteurRow(recordId) {
-      const record = records.find(rec => rec.ID_Ligne === recordId);
+      const record = records.find(rec => rec.id === recordId);
       if (!record) {
         console.error("Record not found:", recordId);
         return;
@@ -496,17 +486,27 @@
         Reference: '',
         Indice: '',
         Recu: '',
-        DescriptionObservations: '',
-        ID_Ligne: (maxIdLigne + 1).toString()
+        DescriptionObservations: ''
       };
 
       grist.docApi.applyUserActions([
         ['AddRecord', 'References', null, newRow]
       ])
         .then(() => {
-          console.log("New row inserted below:", newRow);
-          records.push(newRow); // Update local records with new ID
-          populateTable(); // Refresh the table display
+          console.log("New row inserted :", newRow);
+          // Refresh records from Grist to ensure we have latest data
+          grist.onRecords(function(updatedRecords) {
+            records = updatedRecords.map(record => ({
+              NomProjet: record.NomProjet || '',
+              NomEtage: record.NomEtage || '',
+              Emetteur: record.Emetteur || '',
+              Reference: record.Reference || '',
+              Indice: record.Indice || '',
+              Recu: record.Recu || '',
+              DescriptionObservations: record.DescriptionObservations || ''
+            }));
+            populateTable(); // Refresh the table display
+          });
         })
         .catch(error => {
           console.error("Error inserting row:", error);
