--- a/Affichage.html
+++ b/Affichage.html
@@ -656,7 +656,9 @@
         'ASCENSORISTE',
         'CHARPENTIER',
         'METHODES',
-        'PLANS STRUCTURE AP'
+        'OUVRAGES PROVISOIRES',
+        'PLANS STRUCTURE AP',
+        'RELEVE TOPOGRAPHIE'
       ];
 
       // Function to create new rows based on the emetteurs array
